# Local_PDFtoDocx-OCR

./: .dockerignore  .env.example  .gitignore  .installed_ok  Dockerfile  LICENSE  README.md  SPEC.md  _check_general_pdf.py  _run_e2e_docker.py  _test.py  app.py  build_exe.py  build_installer.py  create_shortcut.py  docker-compose.yml  docker_build.txt  docker_deploy_test.bat  gui_app.py  install.bat  install.sh  installer_gui.py  package_release.py  pyproject.toml  release.bat  release.sh  requirements.txt  results_nodock.txt  run_e2e_test.py  sonar-project.properties  test_all_results.txt  test_docker_results.txt  test_final_results.txt  test_full_results.txt  test_pipeline_results.txt  test_subset_results.txt  test_ui_nodock.txt  test_ui_results.txt
src/: __init__.py  correction_store.py  demo_canon.py  demo_canon_data.json  docling_adapter.py  docling_backend.py  docling_ocr_plugin.py  exporter.py  layout_detector.py  ocr_engine.py  pipeline.py  preprocessor.py  runtime.py  services.py
test_selenium_output/: selenium_results.json
tests/: Expected-output-testocr-demon.docx  conftest.py  test_absolute_export.py  test_docling_adapter.py  test_golden_demo.py  test_pipeline.py  test_selenium_ui.py  test_ui.py
